prevent horizontal scrolling issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,5 @@
   display: grid;
   grid-template-rows: max-content auto max-content;
   height: 100%;
+  overflow: hidden;
 }
